--- a/index.html
+++ b/index.html
@@ -1,170 +1,118 @@
 <!DOCTYPE html>
 <html lang="th">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-    <title>VR สุขภาพ ป.5 — อนามัย โภชนาการ ออกกำลังกาย (WebXR)</title>
-    <meta name="description" content="WebXR สำหรับ ป.5: อนามัยส่วนบุคคล โภชนาการ และการออกกำลังกาย"/>
-    <!-- A‑Frame -->
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <!-- Optional Extras -->
-    <script src="https://cdn.jsdelivr.net/npm/aframe-event-set-component@5.0.1/dist/aframe-event-set-component.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe-layout-component@6.1.2/dist/aframe-layout-component.min.js"></script>
-    <link rel="preconnect" href="https://aframe.io"/>
-    <style>
-      html, body { margin:0; height:100%; background:#111; }
-      .fallback { position:fixed; inset:0; display:flex; align-items:center; justify-content:center; color:white; font-family:system-ui, sans-serif;}
-    </style>
-  </head>
-  <body>
-    <a-scene renderer="colorManagement: true; physicallyCorrectLights: true;"
-             background="color: #1b1f2a"
-             xr-mode-ui="enabled: true"
-             vr-mode-ui="enabled: true"
-             device-orientation-permission-ui="enabled: true">
-      <a-assets timeout="60000">
-        <img id="texRoom" src="./assets/room.jpg"/>
-        <img id="texBtn" src="./assets/btn.png"/>
-        <audio id="sfxClick" src="./assets/click.mp3"></audio>
-        <audio id="sfxSuccess" src="./assets/success.mp3"></audio>
-        <audio id="sfxWrong" src="./assets/wrong.mp3"></audio>
-        <audio id="bgm" src="./assets/bgm.mp3"></audio>
-              <img id="stepImg0" src="./assets/hygiene_1.jpg"/>
-        <img id="stepImg1" src="./assets/hygiene_2.jpg"/>
-        <img id="stepImg2" src="./assets/hygiene_3.jpg"/>
-        <img id="stepImg3" src="./assets/hygiene_4.jpg"/>
-        <img id="stepImg4" src="./assets/hygiene_5.jpg"/>
-        <img id="stepImg5" src="./assets/hygiene_6.jpg"/>
-        <img id="stepImg6" src="./assets/hygiene_7.jpg"/>
-      </a-assets>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+  <title>VR สุขภาพ ป.5 (ใหม่)</title>
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="./js/app.js"></script>
+  <style>html,body{margin:0;height:100%;background:#101418}</style>
+</head>
+<body>
+  <a-scene background="color: #0f172a" renderer="colorManagement: true; physicallyCorrectLights: true;">
+    <a-assets timeout="60000">
+      <img id="sky" src="./assets/sky.jpg"/>
+      <img id="btn" src="./assets/btn.png"/>
+      <!-- Hygiene step images -->
+      <img id="h0" src="./assets/hygiene_1.jpg"/>
+      <img id="h1" src="./assets/hygiene_2.jpg"/>
+      <img id="h2" src="./assets/hygiene_3.jpg"/>
+      <img id="h3" src="./assets/hygiene_4.jpg"/>
+      <img id="h4" src="./assets/hygiene_5.jpg"/>
+      <img id="h5" src="./assets/hygiene_6.jpg"/>
+      <img id="h6" src="./assets/hygiene_7.jpg"/>
+      <audio id="click" src="./assets/click.wav"></audio>
+      <audio id="ok" src="./assets/ok.wav"></audio>
+      <audio id="no" src="./assets/no.wav"></audio>
+    </a-assets>
 
-      <!-- Sky / Room -->
-      <a-sky src="#texRoom" rotation="0 -90 0"></a-sky>
+    <a-sky src="#sky"></a-sky>
+    <a-entity light="type: ambient; intensity: 0.9"></a-entity>
+    <a-entity light="type: directional; intensity: 0.6" position="0 3 -1"></a-entity>
 
-      <!-- Lighting -->
-      <a-entity light="type: ambient; intensity: 0.7"></a-entity>
-      <a-entity light="type: directional; intensity: 0.8" position="0 3 -1"></a-entity>
-
-      <!-- Camera & Cursor (Gaze + Tappable) -->
-      <a-entity id="rig">
-        <a-entity id="camera" camera look-controls position="0 1.6 0">
-          <a-entity id="cursor"
-                    cursor="fuse: true; fuseTimeout: 900"
-                    geometry="primitive: ring; radiusInner: 0.004; radiusOuter: 0.006"
-                    position="0 0 -1"
-                    material="color: white; shader: flat; opacity: 0.9"
-                    raycaster="objects: .clickable">
-          </a-entity>
-          <!-- HUD -->
-          <a-entity id="hud" position="0 -0.18 -0.8">
-            <a-entity id="hudBox" geometry="primitive: plane; height: 0.11; width: 0.64"
-                      material="color: #000; opacity: 0.5"></a-entity>
-            <a-entity id="hudText" text="value: พร้อมเริ่มเกม; width: 1.8; align: center; color: #fff; wrapCount: 30"
-                      position="0 0 0.01"></a-entity>
-          </a-entity>
+    <!-- Camera rig + cursor -->
+    <a-entity id="rig">
+      <a-entity id="cam" camera look-controls position="0 1.6 0">
+        <a-entity id="cursor" cursor="fuse: true; fuseTimeout: 900"
+          raycaster="objects: .clickable"
+          position="0 0 -1"
+          geometry="primitive: ring; radiusInner: 0.004; radiusOuter: 0.006"
+          material="color: #fff; shader: flat; opacity: 0.9"></a-entity>
+        <!-- HUD -->
+        <a-entity id="hud" position="0 -0.18 -0.8">
+          <a-entity geometry="primitive: plane; width: 0.70; height: 0.12" material="color:#000; opacity:0.55"></a-entity>
+          <a-entity id="hudText" text="value: พร้อมเริ่ม; width:2.2; align:center; color:#fff; wrapCount:34" position="0 0 0.01"></a-entity>
         </a-entity>
       </a-entity>
+    </a-entity>
 
-      <!-- Main Menu -->
-      <a-entity id="uiMain" visible="true" position="0 1.5 -1.8">
-        <a-entity geometry="primitive: plane; width: 1.2; height: 0.78" material="color: #0b3d91; opacity: 0.92;"
-                  position="0 0 0"></a-entity>
-        <a-entity text="value: เกมสุขภาพ ป.5; width: 3.2; align: center; color: #fff;"
-                  position="0 0.28 0.01"></a-entity>
+    <!-- Main Menu (centered and high-contrast) -->
+    <a-entity id="uiMain" position="0 1.55 -1.8">
+      <a-entity geometry="primitive: plane; width: 1.2; height: 0.86" material="color:#0b3d91; opacity:0.95"></a-entity>
+      <a-entity text="value: เกมสุขภาพ ป.5 (ใหม่); width:3.2; align:center; color:#fff" position="0 0.34 0.01"></a-entity>
 
-        <a-entity id="btnStartTimed" class="clickable"
-                  geometry="primitive: plane; width: 1.0; height: 0.16"
-                  material="src: #texBtn; transparent: true;"
-                  position="0 0.09 0.01">
-          <a-entity text="value: เริ่มเกม (จับเวลา); width: 2.8; align: center; color: #111;"
-                    position="0 0 0.01"></a-entity>
-        </a-entity>
-
-        <a-entity id="btnStartPractice" class="clickable"
-                  geometry="primitive: plane; width: 1.0; height: 0.16"
-                  material="src: #texBtn; transparent: true;"
-                  position="0 -0.09 0.01">
-          <a-entity text="value: โหมดฝึก (ไม่จับเวลา); width: 2.8; align: center; color: #111;"
-                    position="0 0 0.01"></a-entity>
-        </a-entity>
-
-        <a-entity id="btnHow" class="clickable"
-                  geometry="primitive: plane; width: 1.0; height: 0.16"
-                  material="src: #texBtn; transparent: true;"
-                  position="0 -0.27 0.01">
-          <a-entity text="value: วิธีเล่น; width: 2.8; align: center; color: #111;"
-                    position="0 0 0.01"></a-entity>
-        </a-entity>
+      <a-entity id="btnTimed" class="clickable" geometry="primitive: plane; width:1.0; height:0.16" material="src:#btn; transparent:true" position="0 0.12 0.01">
+        <a-entity text="value: เริ่มเกม (จับเวลา); width:2.8; align:center; color:#111" position="0 0 0.01"></a-entity>
       </a-entity>
 
-      <!-- Game Select (once in) -->
-      <a-entity id="uiGameSelect" visible="false" position="0 1.5 -1.8">
-        <a-entity geometry="primitive: plane; width: 1.2; height: 0.86" material="color: #064e3b; opacity: 0.9;"></a-entity>
-        <a-entity text="value: เลือกมินิเกม; width: 3.2; align: center; color: #fff;" position="0 0.34 0.01"></a-entity>
-
-        <a-entity id="btnHygiene" class="clickable" geometry="primitive: plane; width: 1.0; height: 0.16"
-                  material="src: #texBtn; transparent: true;" position="0 0.12 0.01">
-          <a-entity text="value: อนามัยส่วนบุคคล (ล้างมือ 7 ขั้นตอน); width: 2.8; align: center; color:#111"
-                    position="0 0 0.01"></a-entity>
-        </a-entity>
-
-        <a-entity id="btnNutrition" class="clickable" geometry="primitive: plane; width: 1.0; height: 0.16"
-                  material="src: #texBtn; transparent: true;" position="0 -0.08 0.01">
-          <a-entity text="value: โภชนาการ (เลือกอาหารให้เหมาะสม); width: 2.8; align: center; color:#111"
-                    position="0 0 0.01"></a-entity>
-        </a-entity>
-
-        <a-entity id="btnExercise" class="clickable" geometry="primitive: plane; width: 1.0; height: 0.16"
-                  material="src: #texBtn; transparent: true;" position="0 -0.28 0.01">
-          <a-entity text="value: ออกกำลังกาย (ตีเป้าให้ครบ); width: 2.8; align: center; color:#111"
-                    position="0 0 0.01"></a-entity>
-        </a-entity>
-
-        <a-entity id="btnBackToMain" class="clickable" geometry="primitive: plane; width: 1.0; height: 0.12"
-                  material="src: #texBtn; transparent: true;" position="0 -0.44 0.01">
-          <a-entity text="value: กลับหน้าหลัก; width: 2.4; align: center; color:#111"
-                    position="0 0 0.01"></a-entity>
-        </a-entity>
+      <a-entity id="btnPractice" class="clickable" geometry="primitive: plane; width:1.0; height:0.16" material="src:#btn; transparent:true" position="0 -0.06 0.01">
+        <a-entity text="value: โหมดฝึก (ไม่จับเวลา); width:2.8; align:center; color:#111" position="0 0 0.01"></a-entity>
       </a-entity>
 
-      <!-- How-to Panel -->
-      <a-entity id="uiHow" visible="false" position="0 1.5 -1.8">
-        <a-entity geometry="primitive: plane; width: 1.2; height: 0.9" material="color: #222; opacity: 0.92"></a-entity>
-        <a-entity text="value: วิธีเล่น: มองเป้าหมายให้จุดเล็กตรงกลางล็อกไว้จนเต็มวง (หรือแตะจอ). ใช้โหมดจับเวลาเพื่อเก็บคะแนนดาว.; width: 3.0; color: #fff; align: center; wrapCount: 38"
-                  position="0 0.18 0.01"></a-entity>
-        <a-entity id="btnCloseHow" class="clickable" geometry="primitive: plane; width: 0.9; height: 0.16"
-                  material="src: #texBtn; transparent: true;" position="0 -0.28 0.01">
-          <a-entity text="value: ปิด; width: 2.2; align: center; color:#111" position="0 0 0.01"></a-entity>
-        </a-entity>
+      <a-entity id="btnHow" class="clickable" geometry="primitive: plane; width:1.0; height:0.16" material="src:#btn; transparent:true" position="0 -0.24 0.01">
+        <a-entity text="value: วิธีเล่น; width:2.8; align:center; color:#111" position="0 0 0.01"></a-entity>
+      </a-entity>
+    </a-entity>
+
+    <!-- How to -->
+    <a-entity id="uiHow" visible="false" position="0 1.55 -1.8">
+      <a-entity geometry="primitive: plane; width: 1.2; height: 0.9" material="color:#111; opacity:0.95"></a-entity>
+      <a-entity text="value: วิธีเล่น: ใช้วงเล็งกึ่งกลางจอจ้องปุ่ม/เป้าจนวงเต็ม หรือแตะจอเพื่อกด; width:3.0; align:center; color:#fff; wrapCount:40" position="0 0.18 0.01"></a-entity>
+      <a-entity id="btnCloseHow" class="clickable" geometry="primitive: plane; width:0.9; height:0.16" material="src:#btn; transparent:true" position="0 -0.28 0.01">
+        <a-entity text="value: ปิด; width:2.2; align:center; color:#111" position="0 0 0.01"></a-entity>
+      </a-entity>
+    </a-entity>
+
+    <!-- Game Select -->
+    <a-entity id="uiSelect" visible="false" position="0 1.55 -1.8">
+      <a-entity geometry="primitive: plane; width: 1.2; height: 0.92" material="color:#065f46; opacity:0.95"></a-entity>
+      <a-entity text="value: เลือกมินิเกม; width:3.0; align:center; color:#fff" position="0 0.36 0.01"></a-entity>
+
+      <a-entity id="selHygiene" class="clickable" geometry="primitive: plane; width:1.0; height:0.16" material="src:#btn; transparent:true" position="0 0.14 0.01">
+        <a-entity text="value: อนามัยส่วนบุคคล (ล้างมือ 7 ขั้น); width:2.8; align:center; color:#111" position="0 0 0.01"></a-entity>
       </a-entity>
 
-      
-      <!-- Hygiene Step Illustration -->
-      <a-entity id="hygienePanel" visible="false" position="0 1.45 -1.25">
-        <a-entity id="hygieneImage" geometry="primitive: plane; width: 0.9; height: 0.5"
-                  material="color: #000; opacity: 0.9"></a-entity>
-        <a-entity id="hygieneCaption" position="0 -0.36 0.01"
-                  text="value: ขั้นตอนล้างมือ; width: 2.6; align: center; color: #fff; wrapCount: 36"></a-entity>
-      </a-entity>
-    
-      <!-- Game Root -->
-      <a-entity id="gameRoot" visible="false"></a-entity>
-
-      <!-- Summary Panel -->
-      <a-entity id="uiSummary" visible="false" position="0 1.5 -1.8">
-        <a-entity geometry="primitive: plane; width: 1.2; height: 0.9" material="color: #111827; opacity: 0.95"></a-entity>
-        <a-entity id="summaryTitle" text="value: สรุปผล; width: 3.2; align: center; color: #fff;"
-                  position="0 0.33 0.01"></a-entity>
-        <a-entity id="summaryText" text="value: ...; width: 2.8; align: center; color: #e5e7eb; wrapCount: 40"
-                  position="0 0.05 0.01"></a-entity>
-        <a-entity id="btnSummaryBack" class="clickable" geometry="primitive: plane; width: 1.0; height: 0.16"
-                  material="src: #texBtn; transparent: true;" position="0 -0.28 0.01">
-          <a-entity text="value: กลับเลือกเกม; width: 2.8; align: center; color:#111" position="0 0 0.01"></a-entity>
-        </a-entity>
+      <a-entity id="selNutrition" class="clickable" geometry="primitive: plane; width:1.0; height:0.16" material="src:#btn; transparent:true" position="0 -0.06 0.01">
+        <a-entity text="value: โภชนาการ (เลือกอาหาร); width:2.8; align:center; color:#111" position="0 0 0.01"></a-entity>
       </a-entity>
 
-      <script src="./js/game.js"></script>
-    </a-scene>
-    <div class="fallback" id="fallback" style="display:none;">กำลังโหลด...</div>
-  </body>
+      <a-entity id="selExercise" class="clickable" geometry="primitive: plane; width:1.0; height:0.16" material="src:#btn; transparent:true" position="0 -0.26 0.01">
+        <a-entity text="value: ออกกำลังกาย (ตีเป้า); width:2.8; align:center; color:#111" position="0 0 0.01"></a-entity>
+      </a-entity>
+
+      <a-entity id="btnBackMain" class="clickable" geometry="primitive: plane; width:1.0; height:0.12" material="src:#btn; transparent:true" position="0 -0.42 0.01">
+        <a-entity text="value: กลับหน้าหลัก; width:2.4; align:center; color:#111" position="0 0 0.01"></a-entity>
+      </a-entity>
+    </a-entity>
+
+    <!-- Hygiene step illustration (always centered; hide/show by code) -->
+    <a-entity id="hPanel" visible="false" position="0 1.48 -1.28">
+      <a-entity id="hImg" geometry="primitive: plane; width: 0.96; height: 0.54" material="color:#000; opacity:0.9"></a-entity>
+      <a-entity id="hCap" position="0 -0.38 0.01" text="value: ; width: 2.8; align: center; color:#fff; wrapCount: 38"></a-entity>
+    </a-entity>
+
+    <!-- Game root -->
+    <a-entity id="game" visible="false"></a-entity>
+
+    <!-- Summary -->
+    <a-entity id="uiSummary" visible="false" position="0 1.55 -1.8">
+      <a-entity geometry="primitive: plane; width: 1.2; height: 0.9" material="color:#111827; opacity:0.96"></a-entity>
+      <a-entity id="sumTitle" text="value: สรุปผล; width:3.0; align:center; color:#fff" position="0 0.32 0.01"></a-entity>
+      <a-entity id="sumText" text="value: ; width:2.8; align:center; color:#e5e7eb; wrapCount: 40" position="0 0.04 0.01"></a-entity>
+      <a-entity id="btnSumBack" class="clickable" geometry="primitive: plane; width:1.0; height:0.16" material="src:#btn; transparent:true" position="0 -0.28 0.01">
+        <a-entity text="value: กลับเลือกเกม; width:2.8; align:center; color:#111" position="0 0 0.01"></a-entity>
+      </a-entity>
+    </a-entity>
+  </a-scene>
+</body>
 </html>
